--- a/SQL/package.json
+++ b/SQL/package.json
@@ -21,12 +21,14 @@
     "faker": "^4.1.0",
     "jest-environment-enzyme": "^7.0.0",
     "mongoose": "^5.3.7",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.6",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-responsive-carousel": "^3.1.43",
-    "regenerator-runtime": "^0.12.1"
+    "regenerator-runtime": "^0.12.1",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
