--- a/code/package.json
+++ b/code/package.json
@@ -15,18 +15,24 @@
   },
   "dependencies": {
     "babel-jest": "^23.6.0",
+    "body-parser": "^1.18.3",
+    "csv": "^4.0.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-plugin-jest": "^21.26.2",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "jest-environment-enzyme": "^7.0.0",
     "mongoose": "^5.3.7",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.6",
+    "pg": "^7.6.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-responsive-carousel": "^3.1.43",
-    "regenerator-runtime": "^0.12.1"
+    "regenerator-runtime": "^0.12.1",
+    "sequelize": "^4.41.2",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
