--- a/code/package.json
+++ b/code/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.18.6",
     "pg": "^7.6.1",
+    "pg-hstore": "^2.3.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
