--- a/code/package.json
+++ b/code/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "jest-environment-enzyme": "^7.0.0",
+    "linebyline": "^1.3.0",
     "mongoose": "^5.3.7",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.6",
