--- a/code/package.json
+++ b/code/package.json
@@ -62,6 +62,7 @@
     "jest-enzyme": "^7.0.0",
     "jest-fetch-mock": "^1.6.6",
     "mongo-seeding": "^3.0.0",
+    "newrelic": "^4.11.0",
     "path": "^0.12.7",
     "style-loader": "^0.23.1",
     "supertest": "^3.3.0",
