--- a/code/package.json
+++ b/code/package.json
@@ -9,21 +9,23 @@
   },
   "scripts": {
     "build": "webpack -d --watch",
-    "start": "nodemon server/listen.js",
+    "start": "nodemon server/index.js",
     "test": "jest --coverage",
     "generate-data": "node seed-data/writeTenMillionPrimary.js",
     "seed-cassandra": "cqlsh --file 'database/schema.cql'",
     "seed-postgres": " node database/index.js && psql -U postgres -d luantran < /Users/luantran/Documents/SDC/movie-summary/code/seed-data/insert.sql"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-jest": "^23.6.0",
     "body-parser": "^1.18.3",
     "cassandra-driver": "^3.5.0",
+    "compression": "^1.7.3",
+    "cors": "^2.8.5",
     "csv": "^4.0.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-plugin-jest": "^21.26.2",
     "express": "^4.16.4",
-    "faker": "^4.1.0",
     "jest-environment-enzyme": "^7.0.0",
     "linebyline": "^1.3.0",
     "mongoose": "^5.3.7",
@@ -56,7 +58,9 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "faker": "^4.1.0",
     "fs": "0.0.1-security",
+    "http-proxy-middleware": "^0.19.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "jest-enzyme": "^7.0.0",
