--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -1,5 +1,6 @@
 # What image do you want to start building on?
 FROM node:latest
+ENV NODE_ENV production
 
 # Make a folder in your image where your app's source code can live
 RUN mkdir -p /src/app
