--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -1,20 +1,14 @@
 version: '3'
 
 services:
+  database:
+    image: cassandra
+    ports:
+      - '27017:27017'
 
   summaryserver:
     build: ./
     ports:
       - '80:3007'
-    links:
-      - database
-
-  database:
-    image: mongo
-    ports:
-      - "27017:27017"
-
-  mongo-seed:
-    build: ./mongo-seed
     links:
       - database
