--- a/code/package.json
+++ b/code/package.json
@@ -8,7 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "build": "webpack -d",
+    "build": "webpack -d --progress -p",
     "start": "pm2 start ecosystem.config.js",
     "test": "jest --coverage",
     "generate-data": "node seed-data/writeTenMillionCass.js",
